--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+
+    "express-session": "~1.11.3",
+    "express-socket.io-session": "~1.3.0"
   }
 }
