--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "serve-favicon": "~2.3.0",
 
     "express-session": "~1.11.3",
-    "express-socket.io-session": "~1.3.0"
+    "express-socket.io-session": "~1.3.0",
+    "mysql": "~2.8.0"
   }
 }
